# crypto-usage-analyzer

./: .gitignore  Cargo.toml  README.md  meson.build  meson_options.txt
build-aux/: cargo.sh  meson-post-install.sh
data/: meson.build  org.gnome.CryptoUsageAnalyzer.desktop.in  org.gnome.CryptoUsageAnalyzer.metainfo.xml.in
src/: data.rs  main.rs  models.rs  sunburst.rs
