[package]
name = "crypto-usage-analyzer"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = "0.9"
gdk4 = "0.9"
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cairo-rs = { version = "0.20", features = ["png"] }
anyhow = "1.0"
jiff = { version = "0.2", features = ["std"] }
sysinfo = "0.37"

[[bin]]
name = "crypto-usage-analyzer"
path = "src/main.rs"
